--- a/views/info.ejs
+++ b/views/info.ejs
@@ -2,13 +2,10 @@
   <head>
     <title>MelleWS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
     <%- include('bar', {req: req}); %>
-    <br/>
-    <br/>
-    <br/>
-    <p class="w3-margin">To be added.</p>
+    <p>To be added.</p>
   </body>
 </html>
