--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -8,6 +8,7 @@
 <style>
   :root {
     --Accent: rgb(<%= barCol.split(".")[0]%>);
+    --AccentB: <%= barCol.split(".")[0]%>;
     --Prim: rgb(255, 0, 183);
     --Back: rgb(230, 230, 230);
     --btn: rgb(68, 68, 68);
