--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -22,8 +22,8 @@
       </div>
       <div class="row">
         <div class="card card-1">
-          <h2>Card 1</h2>
-          <p>Card 1 content</p>
+          <h2>About</h2>
+          <p><%= data.bio %></p>
         </div>
         <div class="card card-2">
           <h2>Card 2</h2>
