--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,6 +45,9 @@ body{
     border: transparent;
     border-radius: 15px;
     height: 4px;
+    background: rgba(var(--AccentB),0.5); 
+    margin:auto;
+    width:75%;
 }
 .main_footer{
     position: fixed;
