--- a/views/dlview.ejs
+++ b/views/dlview.ejs
@@ -33,7 +33,7 @@
           <% } else if(req.session.user.username != flobj.usrnm) { %>
             <a class="w3-button w3-teal w3-disabled" href="#">Unauthorised.</a>
           <% } else { %>
-            <a class="w3-button w3-teal" href="/user/<%= flobj.usrnm %>/<%= encodeURIComponent(flobj.name) %>" download="">Download (private)</a>
+            <a class="w3-button w3-teal" href="/user/<%= flobj.usrnm %><%= (flobj.folder == "/" ? "" : flobj.folder) %>/<%= encodeURIComponent(flobj.name) %>" download="">Download (private)</a>
           <% } %>
         <% } else { %>
           <a class="w3-button w3-teal" href="/direct/<%= encodeURIComponent(flobj.name) %>" download="<%= decodeURIComponent(flobj.name) %>">Download</a>
