--- a/public/stylesheets/drive.css
+++ b/public/stylesheets/drive.css
@@ -1,3 +1,17 @@
+@keyframes startanim {
+    from {
+      box-shadow:  0px 0px 10px #bebebe,
+      -0px -0px 10px #ffffff;
+
+    }
+    to {
+       box-shadow:  20px 20px 60px #bebebe,
+                -20px -20px 60px #ffffff;
+
+    }
+}
+
+
 body{
     font-family: 'Segoe UI', sans-serif;
     /*background: rgb(107, 107, 107);*/
@@ -25,7 +39,10 @@ body{
     padding: 2rem;
     border-radius: 90px;
     box-shadow:  20px 20px 60px #bebebe,
-                -20px -20px 60px #ffffff;
+    -20px -20px 60px #ffffff;
+
+   
+    animation: startanim 1s;
 }
 
 .form_container{
