--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,3 +1,17 @@
+@keyframes startanim {
+    from {
+      box-shadow:  0px 0px 10px #bebebe,
+      -0px -0px 10px #ffffff;
+      opacity: 0;
+    }
+    to {
+       box-shadow:  20px 20px 60px #bebebe,
+                -20px -20px 60px #ffffff;
+      opacity: 1;
+    }
+}
+
+
 body{
     font-family: 'Segoe UI', sans-serif;
     background-color: var(--Back);
@@ -25,6 +39,8 @@ body{
     border-radius: 90px;
     box-shadow:  20px 20px 60px #bebebe,
              -20px -20px 60px #ffffff;
+
+    animation: startanim 1.0s;
 }
 
 .login_form{
