--- a/views/diredit.ejs
+++ b/views/diredit.ejs
@@ -2,7 +2,9 @@
   <head>
     <title>MelleWS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="/stylesheets/style.css"/>
+    <link rel="stylesheet" href="/stylesheets/diredit.css"/>
+    <link rel="stylesheet" href="/stylesheets/profile.css"/>
     <style>
         .inpbox {
             background-color: whitesmoke;
@@ -14,29 +16,29 @@
     <br/>
     <br/>
     <br/>
-    <div class="w3-center">
+    <div class="main_wrapper">
         <h1>Edit <%= req.session.user.username %>'s Directory</h1>
-        <div class="w3-display-middle w3-container">
-            <div class="w3-card w3-margin w3-margin-top" style="display: inline-block;">
+        <div class="forms_wrapper_grid">
+            <div class="new_file_form_wrapper form_wrapper" style="display: inline-block;">
                 <div class="w3-container">
                   <h2 class="w3-text-teal">New file</h2>
                 </div>
                 <form class="w3-container w3-padding dropzone" action="/editmydir/newfile" method="post" class="w3-padding">
                   <label for="filetoupload">Filename</label>
-                  <input class="w3-input inpbox" name="nfname" id="nfname" required>
+                  <input class="textarea" name="nfname" id="nfname" required>
                   <label for="dispmetd">File content</label>
-                  <textarea class="w3-input inpbox" name="nfcontent" id="nfcontent" cols="20" rows="5"></textarea>
-                  <input class="w3-button" type="submit">
+                  <textarea class="textarea" name="nfcontent" id="nfcontent" cols="20" rows="5"></textarea>
+                  <input class="main_btn" type="submit">
                 </form>
             </div>
-            <div class="w3-card w3-margin w3-margin-top" style="display: inline-block;">
+            <div class="new_dir_form_wrapper form_wrapper" style="display: inline-block;">
                 <div class="w3-container">
                   <h2 class="w3-text-teal">New directory</h2>
                 </div>
                 <form class="w3-container w3-padding" action="/editmydir/newdir" method="post" class="w3-padding">
                   <label for="filetoupload">Name</label>
-                  <input class="w3-input inpbox" name="ndname" id="ndname" required>
-                  <input class="w3-button" type="submit">
+                  <input class="textarea" name="ndname" id="ndname" required>
+                  <input class="main_btn" type="submit">
                 </form>
             </div>
         </div>
