--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -26,8 +26,8 @@
           <p><%= data.bio %></p>
         </div>
         <div class="card card-2">
-          <h2>Card 2</h2>
-          <p>Card 2 content</p>
+          <h2>Public Files</h2>
+          <p>Public File display is not yet available.</p>
         </div>
       </div>
     </div>
